extractIPInfo로 전달되는 input 정보가 null 인 경우 exception 처리되는 부분에 대한 대응. publish했을 때 결과물이 포함되지 않는 문제 수정.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "net-dev-ip-manager",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Modules that manage IP-related settings for network devices",
   "main": "./lib/cjs",
   "module": "./lib/esm",
   "types": "./lib/types/index.d.ts",
   "scripts": {
+    "prebuild": "npm run clean",
     "build": "npm run build:cjs && npm run build:esm && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
+    "build:cjs": "tsc -p config/tsconfig.cjs.json",
+    "build:esm": "tsc -p config/tsconfig.esm.json",
+    "build:types": "tsc -p config/tsconfig.types.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:integ": "jest --config=jest.integration.config.js",
     "clean": "node tools/cleanup",
+    "prepack": "echo 'Ensuring lib directory exists before packing'",
     "package": "npm run build && npm pack"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "keywords": [
     "network",
     "device",
@@ -25,7 +30,7 @@
   ],
   "author": {
     "name": "Sang Moon, Lee",
-    "email": "moonysl@hanmail.net",
+    "email": "moonysl@naver.com",
     "url": "https://github.com/moonyl"
   },
   "license": "MIT",
